--- a/HOME/css/style.scss
+++ b/HOME/css/style.scss
@@ -1,36 +1,63 @@
 * {
-  margin: 0;
-  padding: 0;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   font-family: 'Open Sans', sans-serif;
 }
 
 body {
+  margin: 0;
   width: 100%;
   height: 100%;
   overflow: hidden;
 }
 
-/* /////////////////////////////NAVIGATION///////////////////////////////////*/
-
-
-header {
-  height: 100px;
+/* /////////////////////////////Header///////////////////////////////////*/
+.cabecalho {
   border-radius: 0px;
   background: linear-gradient(225deg, #ffffff, #dadada);
   box-shadow:  -24px 24px 48px #f0f0f0,
                24px -24px 48px #f4f4f4;
 }
-li{
-  text-transform: uppercase;
-  margin: 10px;
-  font-size: 20px;
-  list-style-type: none;
-  display: inline;
-  position: relative;
-  left: 23em;
-  bottom: 5.2rem;
+.logo img {
+  display: inline-block;
+  height: 80px;
+  padding: 15px;
+}
+.menu-toggle{
+  float: right;
+  color: white;
+  background-color: #555;
+  border: solid 1px #777;
+  border-radius: 5px;
+  height: 40px;
+  padding: 10px 20px;
+  margin: 20px 15px;
+}
+
+.menu{
+  display: inline-block;
+  vertical-align: top;
+  height: 80px;
+  padding: 25px;
+}
+
+.menu ul {
+  display: inline-block;
+
+}
+.menu a {
+  text-decoration: none;
+  color: white;
+  font-size: 1.3em;
+  padding:  15px;
+}
+.menu a {
+  padding: 15px;
+}
+.autenticacao {
+  float: right;
+  height: 80px;
+  padding: 25px;
 }
 a {
   z-index: 1;
@@ -49,7 +76,7 @@ a {
   letter-spacing: 2px;
 }
 
-a:before {
+.menu a:before {
   display: inline-block;
   transition: bottom, 0.35s;
   position: absolute;
@@ -63,11 +90,11 @@ a:before {
   z-index: -1;
 }
 
-a:hover {
+.menu a:hover {
    box-shadow: 0px 0px 0  0px #ffCA7A;
 }
 
-a:hover:before {
+.menu a:hover:before {
   top: -40px;
   left: -40px;
 }
@@ -82,15 +109,7 @@ a:hover:before {
   bottom: 9rem;
   padding-inline-end: 10px;
 }
-img{
-  margin-top: 10px;
-}
-.inicio:hover {
-
-}
-
-
-/* /////////////////////////////INMAGE///////////////////////////////////*/
+/* /////////////////////////////IMAGE///////////////////////////////////*/
 .bg1 {
   font-family: var(--body-font);
   background-image: url(https://4kwallpapers.com/images/wallpapers/macos-big-sur-apple-layers-fluidic-colorful-dark-wwdc-2020-5120x2880-1432.jpg);
@@ -189,21 +208,5 @@ img{
 }
 
 /* /////////////////////////////Footer///////////////////////////////////*/
-footer {
-  margin-top: 20px;
-  z-index: 1;
-  width: 100%;
-  text-align: center;
-}
 
-footer footer {
-  background: rgba(27, 43, 105, 0.4);
-  -webkit-box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
-          box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
-  backdrop-filter: blur(13px);
-  -webkit-backdrop-filter: blur(13px);
-  border-radius: 10px;
-  border: 1px solid rgba(255, 255, 255, 0.18);
-  padding: 70px 0 50px 0;
-}
 /*# sourceMappingURL=style.css.map */
