--- a/HOME/css/style.css
+++ b/HOME/css/style.css
@@ -1,45 +1,85 @@
 @charset "UTF-8";
 * {
-  margin: 0;
-  padding: 0;
   -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-  font-family: 'Open Sans', sans-serif;
+          box-sizing: border-box;
 }
 
 body {
+  margin: 0;
+  font-family: var(--body-font);
+  background-image: url(https://4kwallpapers.com/images/wallpapers/macos-big-sur-apple-layers-fluidic-colorful-dark-wwdc-2020-5120x2880-1432.jpg);
+  background-size: cover;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
   width: 100%;
-  height: 100%;
-  overflow: hidden;
+  height: 100vh;
+  font-family: 'Open Sans', sans-serif;
+}
+
+@media screen and (max-width: 480px) {
+  body {
+    padding: 0.8em;
+  }
 }
 
 /* /////////////////////////////NAVIGATION///////////////////////////////////*/
-header {
-  height: 100px;
+.cabecalho {
+  height: 80px;
   border-radius: 0px;
   background: linear-gradient(225deg, #ffffff, #dadada);
-  -webkit-box-shadow: -24px 24px 48px #f0f0f0, 24px -24px 48px #f4f4f4;
-          box-shadow: -24px 24px 48px #f0f0f0, 24px -24px 48px #f4f4f4;
 }
 
-li {
+.logo {
+  display: inline-block;
+  height: 80px;
+  padding: 15px;
+}
+
+.logo img {
+  height: 100%;
+}
+
+.menu-togle {
+  float: right;
+  color: white;
+  background-color: #555;
+  border: solid 1px #777;
+  border-radius: 5px;
+  height: 40px;
+  padding: 10px 20px;
+  margin: 20px 15px;
+}
+
+.menu {
+  display: inline-block;
+  vertical-align: top;
+  height: 80px;
+  padding: 25px;
+}
+
+.menu ul {
+  margin: 0;
+  padding: 0;
+}
+
+.menu li {
+  display: inline-block;
+}
+
+.cabecalho a {
   text-transform: uppercase;
-  margin: 10px;
-  font-size: 20px;
   list-style-type: none;
-  display: inline;
-  position: relative;
-  left: 23em;
-  bottom: 5.2rem;
-}
-
-a {
   z-index: 1;
   background-color: transparent;
   position: relative;
   display: inline-block;
   font-size: 16px;
-  padding: 15px 34px;
+  padding: 15px 40px;
   color: #513A50;
   text-decoration: none;
   border: solid 1px #000000;
@@ -50,6 +90,8 @@ a {
   overflow: hidden;
   text-transform: uppercase;
   letter-spacing: 2px;
+  bottom: 20px;
+  margin: 10px;
 }
 
 a:before {
@@ -78,47 +120,35 @@ a:hover:before {
   left: -40px;
 }
 
+.menu a {
+  padding: 15px 30px;
+}
+
 .autenticacao {
-  text-transform: uppercase;
-  text-decoration: none;
-  list-style-type: none;
   float: right;
-  display: inline;
-  position: relative;
-  bottom: 9rem;
-  -webkit-padding-end: 10px;
-          padding-inline-end: 10px;
+  height: 80px;
+  padding: 25px;
 }
 
-img {
-  margin-top: 10px;
-}
-
-/* /////////////////////////////INMAGE///////////////////////////////////*/
-.bg1 {
-  font-family: var(--body-font);
-  background-image: url(https://4kwallpapers.com/images/wallpapers/macos-big-sur-apple-layers-fluidic-colorful-dark-wwdc-2020-5120x2880-1432.jpg);
-  background-size: cover;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  padding: 2em;
-  width: 100%;
-  height: 100vh;
-  position: relative;
-  bottom: 140px;
-}
-
-@media screen and (max-width: 480px) {
-  .bg1 {
-    padding: 0.8em;
+@media (min-width: 679px) {
+  .menu-togle {
+    display: none;
   }
 }
 
+@media (max-width: 300px) {
+  .menu {
+    display: none;
+  }
+}
+
+@media (max-width: 910px) {
+  .autenticacao {
+    display: none;
+  }
+}
+
+/* /////////////////////////////INMAGE///////////////////////////////////*/
 .bg2 {
   font-family: var(--body-font);
   background-image: url(https://4kwallpapers.com/images/wallpapers/macos-big-sur-apple-layers-fluidic-colorful-dark-wwdc-2020-5120x2880-1432.jpg);
@@ -142,73 +172,60 @@ img {
 }
 
 /* /////////////////////////////LOGIN1///////////////////////////////////*/
-.form-container {
-  position: absolute;
-  right: 200px;
-  top: 15%;
-  width: 400px;
-  height: 50%;
+.form-container form {
+  position: relative;
+  top: 80px;
+  right: 80px;
+  float: right;
+  width: 20%;
+  padding: 10px 10px;
   border-radius: 60px;
   background: #f4f1f1;
 }
 
-.form-container .form-container form {
-  margin-top: 60px;
-  padding: 15px;
-}
-
-.form-container .form-container form p {
-  font-size: 14px;
-  color: #525252;
-}
-
-/* /////////////////////////////LOGIN2///////////////////////////////////*/
-.form-wraper {
-  margin-top: 50px;
-  background-color: transparent;
-  color: #000000;
-  padding: 10px 28px;
-  font-size: 16px;
-  cursor: pointer;
-  border-radius: 20px;
+.form-container form p input {
+  position: relative;
+  left: 77%;
+  margin: 0;
 }
 
 .form-container form input[type=text] {
   width: 100%;
   border: 1px solid #ccc;
   height: 40px;
-  line-height: 45px;
+  line-height: 40px;
   padding-left: 10px;
+  font-size: 10px;
+  border-radius: 10px;
 }
 
 .form-container form input[type=submit] {
-  margin-top: 20px;
-  background-color: #033C50;
   text-transform: uppercase;
-  color: white;
   width: 100%;
-  font-size: 15px;
+  font-size: 13px;
   height: 3rem;
   cursor: pointer;
   border: 0;
+  color: white;
+  line-height: 40px;
+  background-color: #033C50;
+  border-radius: 10px;
+}
+
+.form-container p {
+  margin: 5px;
+}
+
+/* /////////////////////////////LOGIN2///////////////////////////////////*/
+.form-wraper {
+  margin-top: 10px;
+  background-color: transparent;
+  color: #000000;
+  padding: 10px 30px 40px;
+  font-size: 13px;
+  cursor: pointer;
+  border-radius: 20px;
 }
 
 /* /////////////////////////////Footer///////////////////////////////////*/
-footer {
-  margin-top: 20px;
-  z-index: 1;
-  width: 100%;
-  text-align: center;
-}
-
-footer footer {
-  background: rgba(27, 43, 105, 0.4);
-  -webkit-box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
-  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
-  backdrop-filter: blur(13px);
-  -webkit-backdrop-filter: blur(13px);
-  border-radius: 10px;
-  border: 1px solid rgba(255, 255, 255, 0.18);
-  padding: 70px 0 50px 0;
-}
 /*# sourceMappingURL=style.css.map */
